# Hr-Pro-Pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
core/: database.py  schemas.py  utils.py
dashboard/: app.py
docs/: architecture.md
pipeline/: assembler.py  consumer.py  identity.py  main.py  sql_writer.py
scripts/: check_infra.py
sql/: init_schema.py  schema.sql
tests/tests/: test_utils.py
tests/tests/tests/: test_schemas.py
