[project]
name = "hr-pro-pipeline"
version = "0.1.0"
description = "Pipeline ETL Kafka -> Mongo -> Redis -> Postgres (version solo)"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3.0",
    "pymongo>=4.6.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "plotly>=6.8.0",
    "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "streamlit>=1.32.0",
]

[tool.uv]
package = false
